// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendScreen renders correctly - button should show Copied in title 1`] = `
"<View style={{...}}>
  <withTheme(AccountAddressComponent) account={{...}} />
  <View style={{...}}>
    <QRCode value=\\"value\\" size={300} color=\\"black\\" backgroundColor=\\"white\\" logoSize={20} logoBackgroundColor=\\"white\\" logoMargin={2} logoBorderRadius={0} ecl=\\"M\\" onError={[undefined]} gradientDirection={{...}} linearGradient={{...}} enableLinearGradient={false} quietZone={0} />
  </View>
  <View style={{...}}>
    <withTheme(ButtonComponent) testID=\\"copy-clipboard\\" style={{...}} onPress={[Function: onPress]}>
      Copied
    </withTheme(ButtonComponent)>
  </View>
</View>"
`;

exports[`SendScreen renders correctly 1`] = `
"<View style={{...}}>
  <withTheme(AccountAddressComponent) account={{...}} />
  <View style={{...}}>
    <QRCode value=\\"value\\" size={300} color=\\"black\\" backgroundColor=\\"white\\" logoSize={20} logoBackgroundColor=\\"white\\" logoMargin={2} logoBorderRadius={0} ecl=\\"M\\" onError={[undefined]} gradientDirection={{...}} linearGradient={{...}} enableLinearGradient={false} quietZone={0} />
  </View>
  <View style={{...}}>
    <withTheme(ButtonComponent) testID=\\"copy-clipboard\\" style={{...}} onPress={[Function: onPress]}>
      Copy to clipboard
    </withTheme(ButtonComponent)>
  </View>
</View>"
`;

exports[`SendScreen renders correctly 2`] = `
"<View style={{...}}>
  <withTheme(AccountAddressComponent) account={{...}} />
  <View style={{...}}>
    <QRCode value=\\"value\\" size={300} color=\\"black\\" backgroundColor=\\"white\\" logoSize={20} logoBackgroundColor=\\"white\\" logoMargin={2} logoBorderRadius={0} ecl=\\"M\\" onError={[undefined]} gradientDirection={{...}} linearGradient={{...}} enableLinearGradient={false} quietZone={0} />
  </View>
  <View style={{...}}>
    <withTheme(ButtonComponent) testID=\\"copy-clipboard\\" style={{...}} onPress={[Function: onPress]}>
      Copy to clipboard
    </withTheme(ButtonComponent)>
  </View>
</View>"
`;
